# haskell-picosat

./: .gitignore  .travis.yml  README.md  default.nix  picosat.cabal  stack.yaml
src/: Picosat.hs
test/: Rand.hs  RandomCNF.hs  Scoped.hs  Sudoku.hs
