name:                picosat
version:             0.1.0.0
synopsis:            Bindings to the PicoSAT solver
-- description:         
homepage:            http://www.stephendiehl.com
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen DIehl
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  cbits/picosat.h

library
  exposed-modules:     Picosat

  Cc-options:          
  Ghc-options:        -Wall
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
  Hs-source-dirs:      src
  Include-dirs:        cbits

  C-sources:
    cbits/picosat.c
