name:               picosat
version:            0.1.6
synopsis:           Bindings to the PicoSAT solver
homepage:           https://github.com/sdiehl/haskell-picosat
license:            MIT
license-file:       LICENSE
author:             Stephen Diehl
maintainer:         stephen.m.diehl@gmail.com
copyright:          2014-2020 Stephen Diehl
category:           Logic
build-type:         Simple
cabal-version:      >=1.10
tested-with:
  GHC ==7.6.1
   || ==7.6.2
   || ==7.6.3
   || ==7.8.1
   || ==7.8.2
   || ==7.8.3
   || ==7.8.4
   || ==7.10.1
   || ==7.10.2
   || ==7.10.3
   || ==8.0.1
   || ==8.6.5
   || ==8.8.1
   || ==8.8.2
   || ==8.8.3
   || ==8.10.1

extra-source-files: cbits/picosat.h
bug-reports:        https://github.com/sdiehl/haskell-picosat/issues
description:
  `picosat` provides bindings for the fast PicoSAT solver library.

source-repository head
  type:     git
  location: git@github.com:sdiehl/haskell-picosat.git

library
  exposed-modules:  Picosat
  other-extensions: ForeignFunctionInterface
  ghc-options:      -Wall -O2 -fwarn-tabs
  cc-options:       -funroll-loops

  if os(windows)
    cc-options: -DNGETRUSAGE

  build-depends:
      base          >=4.6 && <5.0
    , containers    >=0.4 && <0.7
    , transformers  >=0.4 && <0.6

  default-language: Haskell2010
  hs-source-dirs:   src
  include-dirs:     cbits
  c-sources:        cbits/picosat.c

test-suite Sudoku
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Sudoku.hs
  default-language: Haskell2010
  build-depends:
      base
    , picosat

test-suite Scoped
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Scoped.hs
  default-language: Haskell2010
  build-depends:
      base
    , containers
    , picosat
    , transformers

test-suite rand-shared-improvement
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Rand.hs
  default-language: Haskell2010
  build-depends:
      base
    , picosat
    , random
    , rdtsc
    , transformers

  other-modules:    RandomCNF
